# QtSampleGallery

./: CMakeLists.txt  README.md  brightlesspickerdialog.cpp  brightlesspickerdialog.h  brightlesspickerdialog.ui  imagefileiterator.cpp  imagefileiterator.h  imagefilemanipulator.cpp  imagefilemanipulator.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
